force-app/main/default/objects/Product2/fields/Acceptance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>検収対象</label>
    <type>Checkbox</type>
</CustomField>