force-app/main/default/objects/Product2/fields/DaytimePlan__c.field-meta.xml
<CustomField>
    <fullName>DaytimePlan__c</fullName>
    <label>【削除予定】日中プラン</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>