force-app/main/default/objects/Product2/fields/DaytimePlanMaxCount__c.field-meta.xml
<CustomField>
    <fullName>DaytimePlanMaxCount__c</fullName>
    <label>【削除予定】日中プラン上限件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>