force-app/main/default/objects/Product2/fields/DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>DiscountRate__c</fullName>
    <label>値引率</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>