force-app/main/default/objects/Product2/fields/DivisionTimes__c.field-meta.xml
<CustomField>
    <fullName>DivisionTimes__c</fullName>
    <label>分割回数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>