force-app/main/default/objects/Product2/fields/EveningPlan__c.field-meta.xml
<CustomField>
    <fullName>EveningPlan__c</fullName>
    <label>【削除】夕方プラン</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>