force-app/main/default/objects/Product2/fields/EveningPlanMaxCount__c.field-meta.xml
<CustomField>
    <fullName>EveningPlanMaxCount__c</fullName>
    <label>【削除予定】夕方プラン上限件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>