force-app/main/default/objects/Product2/fields/FieldNumber__c.field-meta.xml
<CustomField>
    <fullName>FieldNumber__c</fullName>
    <label>分野数</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>