force-app/main/default/objects/Product2/fields/FinalAccountProcess__c.field-meta.xml
<CustomField>
    <fullName>FinalAccountProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>決算処理</label>
    <type>Checkbox</type>
</CustomField>