force-app/main/default/objects/Product2/fields/HolidayPlan__c.field-meta.xml
<CustomField>
    <fullName>HolidayPlan__c</fullName>
    <label>【削除予定】休日プラン</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>