force-app/main/default/objects/Product2/fields/HolidayPlanMaxCount__c.field-meta.xml
<CustomField>
    <fullName>HolidayPlanMaxCount__c</fullName>
    <label>【削除予定】休日プラン上限件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>