force-app/main/default/objects/Product2/fields/NightPlan__c.field-meta.xml
<CustomField>
    <fullName>NightPlan__c</fullName>
    <label>【削除予定】夜間プラン</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>