force-app/main/default/objects/Product2/fields/NightPlanMaxCount__c.field-meta.xml
<CustomField>
    <fullName>NightPlanMaxCount__c</fullName>
    <label>【削除予定】夜間プラン上限件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>