force-app/main/default/objects/Product2/fields/OneTime__c.field-meta.xml
<CustomField>
    <fullName>OneTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>one-time</label>
    <type>Checkbox</type>
</CustomField>