force-app/main/default/objects/Product2/fields/PriceChangeNotPossible__c.field-meta.xml
<CustomField>
    <fullName>PriceChangeNotPossible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>価格変更不可</label>
    <type>Checkbox</type>
</CustomField>