force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Id18__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>AccountTitle__c</columns>
    <columns>Acceptance_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべての商品</label>
</ListView>